// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre SearchScreen Debe mostrar el componente con la informacion de error 1`] = `
Array [
  <h1>
    Search Screen
  </h1>,
  <hr />,
  <div
    className="row animate__animated animate__fadeIn"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="heroe"
          onChange={[Function]}
          placeholder="Find your hero..."
          type="text"
          value=""
        />
        <button
          className="btn btn-block btn-primary mt-2"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <div
        className="alert alert-danger text-center animate__animated animate__zoomIn"
      >
        There aren't any hero called: batman123
      </div>
    </div>
  </div>,
]
`;

exports[`Pruebas sobre SearchScreen Debe mostrar el componente con la informacion del heroe correctamente 1`] = `
Array [
  <h1>
    Search Screen
  </h1>,
  <hr />,
  <div
    className="row animate__animated animate__fadeIn"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="heroe"
          onChange={[Function]}
          placeholder="Find your hero..."
          type="text"
          value=""
        />
        <button
          className="btn btn-block btn-primary mt-2"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <div
        className="animate__animated animate__zoomIn"
        key="dc-batman"
      >
        <div
          className="card ms-3"
          style={
            Object {
              "maxWidth": 540,
            }
          }
        >
          <div
            className="row no-gutters"
          >
            <div
              className="col-md-4"
            >
              <img
                alt="Batman"
                className="card-img"
                src="./assets/heroes/dc-batman.jpg"
              />
            </div>
            <div
              className="col-md-8"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  Batman
                </h5>
                <p
                  className="card-text"
                >
                  Bruce Wayne
                </p>
                <p
                  className="card-text"
                >
                  <small
                    className="text-muted"
                  >
                    Detective Comics #27
                  </small>
                </p>
                <a
                  href="/heroe/dc-batman"
                  onClick={[Function]}
                >
                  Más...
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Pruebas sobre SearchScreen Debe mostrar el componente con la informacion por defecto correctamente 1`] = `
Array [
  <h1>
    Search Screen
  </h1>,
  <hr />,
  <div
    className="row animate__animated animate__fadeIn"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="heroe"
          onChange={[Function]}
          placeholder="Find your hero..."
          type="text"
          value=""
        />
        <button
          className="btn btn-block btn-primary mt-2"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <div
        className="alert alert-info text-center animate__animated animate__zoomIn"
      >
        Search a hero
      </div>
    </div>
  </div>,
]
`;
